Add Google ads & Google Analytics

--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
 <link rel='shortlink' href='https://thomas-veillard.fr/' />
 <link rel="alternate" type="application/json+oembed" href="https://thomas-veillard.fr/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fhttps://thomas-veillard.fr%2F" />
 <link rel="alternate" type="text/xml+oembed" href="https://thomas-veillard.fr/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fhttps://thomas-veillard.fr%2F&#038;format=xml" />
+<script data-ad-client="ca-pub-9505048372269906" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NH45PR7ELJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NH45PR7ELJ');
+</script>
 		<style id="wp-custom-css">
 			.entry-title {
 	font-size: 1.6em !important;
