--- a/quizz/6f2fd75d-9ed3-4652-b447-9d89b1d83567/index.html
+++ b/quizz/6f2fd75d-9ed3-4652-b447-9d89b1d83567/index.html
@@ -271,6 +271,7 @@ h5 {
 		<li id="menu-item-1161" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1161"><a href="https://thomas-veillard.fr/front-end-web-development/practical-works/managing-authentication-routing/">2. Managing authentication &#038; routing</a></li>
 	</ul>
 </li>
+	<li id="menu-item-1578" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1578"><a href="https://thomas-veillard.fr/front-end-web-development/the-project/">Project</a></li>
 </ul>
 </li>
 </ul></div>			</nav><!-- .main-navigation -->
