Add article about IO for OS module

--- a/front-end-web-development/the-project/index.html
+++ b/front-end-web-development/the-project/index.html
@@ -277,6 +277,7 @@ h5 {
 	<ul class="sub-menu">
 		<li id="menu-item-560" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-560"><a href="https://thomas-veillard.fr/theorie-des-systemes-dexploitation-et-pratique-de-gnu-linux/chapitre-2-les-interfaces-utilisateur/1-les-interfaces-graphiques/">1. Les interfaces graphiques</a></li>
 		<li id="menu-item-693" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-693"><a href="https://thomas-veillard.fr/theorie-des-systemes-dexploitation-et-pratique-de-gnu-linux/chapitre-2-les-interfaces-utilisateur/2-utiliser-les-instantanes-de-vm-et-changer-denvironnement-de-bureau-tp/">2. Instantanés de VM et changement d’environnement de bureau (TP)</a></li>
+		<li id="menu-item-1694" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1694"><a href="https://thomas-veillard.fr/theorie-des-systemes-dexploitation-et-pratique-de-gnu-linux/chapitre-2-les-interfaces-utilisateur/3-la-ligne-de-commande-et-les-entrees-sorties/">3. La ligne de commande et les entrées / sorties</a></li>
 	</ul>
 </li>
 </ul>
