--- a/quizz/6f2fd75d-9ed3-4652-b447-9d89b1d83567/index.html
+++ b/quizz/6f2fd75d-9ed3-4652-b447-9d89b1d83567/index.html
@@ -194,7 +194,6 @@ h5 {
   border-radius: 3px;
   border: 1px solid #795548;
   background: #f7f7f7;
-
 }
 
 .video-container {
@@ -258,8 +257,8 @@ h5 {
 			<div class="site-branding">
 										<p class="site-title"><a href="https://thomas-veillard.fr/" rel="home">Thomas VEILLARD</a></p>
 												<p class="site-description">Mes cours et supports pédagogiques pour l&#039;enseignement de l&#039;ingénierie informatique.</p>
-										<!-- <button class="secondary-toggle">Menu et widgets</button> -->
-			</div>
+										<button class="secondary-toggle">Menu			</button>
+</div>
 <!-- .site-branding -->
 		</header><!-- .site-header -->
 
