Add post about web languages

--- a/front-end-web-development/lectures/how-rich-interactive-and-complex-is-this-ui/index.html
+++ b/front-end-web-development/lectures/how-rich-interactive-and-complex-is-this-ui/index.html
@@ -346,6 +346,7 @@ h5 {
 			<li id="menu-item-1399" class="menu-item menu-item-type-post_type menu-item-object-post current-menu-item menu-item-1399"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/how-rich-interactive-and-complex-is-this-ui/" aria-current="page">3. How rich and interactive is this UI ?</a></li>
 			<li id="menu-item-1443" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1443"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/using-web-technologies-to-build-something-else/">4. Using web tools to build something else</a></li>
 			<li id="menu-item-1786" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1786"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/5-what-can-the-web-do-today/">5. What can the web do today ?</a></li>
+			<li id="menu-item-2120" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-2120"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/6-languages-for-the-web/">6. Languages for the web</a></li>
 		</ul>
 </li>
 		<li id="menu-item-1367" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-1367">
