--- a/front-end-web-development/lectures/7-environment-tools-languages-frameworks/index.html
+++ b/front-end-web-development/lectures/7-environment-tools-languages-frameworks/index.html
@@ -334,13 +334,13 @@ h5 {
 </li>
 </ul>
 </li>
-<li id="menu-item-1828" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1828">
+<li id="menu-item-1828" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor menu-item-has-children menu-item-1828">
 <a>Développement web côté client</a>
 <ul class="sub-menu">
-	<li id="menu-item-1097" class="menu-item menu-item-type-taxonomy menu-item-object-category current-post-ancestor current-menu-parent current-post-parent menu-item-has-children menu-item-1097">
+	<li id="menu-item-1097" class="menu-item menu-item-type-taxonomy menu-item-object-category current-post-ancestor current-menu-ancestor current-menu-parent current-post-parent menu-item-has-children menu-item-1097">
 <a href="https://thomas-veillard.fr/category/front-end-web-development/">Suivre ce cours en anglais</a>
 	<ul class="sub-menu">
-		<li id="menu-item-1366" class="menu-item menu-item-type-taxonomy menu-item-object-category current-post-ancestor current-menu-parent current-post-parent menu-item-has-children menu-item-1366">
+		<li id="menu-item-1366" class="menu-item menu-item-type-taxonomy menu-item-object-category current-post-ancestor current-menu-ancestor current-menu-parent current-post-parent menu-item-has-children menu-item-1366">
 <a href="https://thomas-veillard.fr/category/front-end-web-development/lectures/">Lectures</a>
 		<ul class="sub-menu">
 			<li id="menu-item-1099" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1099"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/introduction/">1. Introduction &#038; prerequisites</a></li>
@@ -349,6 +349,7 @@ h5 {
 			<li id="menu-item-1443" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1443"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/using-web-technologies-to-build-something-else/">4. Using web tools to build something else</a></li>
 			<li id="menu-item-1786" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1786"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/5-what-can-the-web-do-today/">5. What can the web do today ?</a></li>
 			<li id="menu-item-2120" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-2120"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/6-languages-for-the-web/">6. Languages for the web</a></li>
+			<li id="menu-item-2293" class="menu-item menu-item-type-post_type menu-item-object-post current-menu-item menu-item-2293"><a href="https://thomas-veillard.fr/front-end-web-development/lectures/7-environment-tools-languages-frameworks/" aria-current="page">7. Environment (tools, languages, frameworks)</a></li>
 		</ul>
 </li>
 		<li id="menu-item-1367" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-1367">
