--- a/maintenance.html
+++ b/maintenance.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Maintenance/title>
+  <title>Maintenance</title>
 </head>
 <body>
   Ce site est actuellement en maintenance.
