Reorganise web development module

--- a/quizz/1e9c9b35-dee4-4045-844c-e20c6327c31c/index.html
+++ b/quizz/1e9c9b35-dee4-4045-844c-e20c6327c31c/index.html
@@ -291,11 +291,10 @@ table {
 </ul>
 </li>
 <li id="menu-item-1097" class="menu-en menu-item menu-item-type-taxonomy menu-item-object-category current-quizz-ancestor current-menu-parent current-quizz-parent menu-item-has-children menu-item-1097">
-<a href="https://thomas-veillard.fr/category/front-end-web-development/">Front-end web development</a>
+<a href="https://thomas-veillard.fr/category/front-end-web-development/">Modern web development</a>
 <ul class="sub-menu">
-	<li id="menu-item-1366" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1366"><a href="https://thomas-veillard.fr/category/front-end-web-development/lectures/">Lectures</a></li>
-	<li id="menu-item-1367" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1367"><a href="https://thomas-veillard.fr/category/front-end-web-development/practical-works/">Practical works</a></li>
-	<li id="menu-item-1578" class="menu-item menu-item-type-post_type menu-item-object-post menu-item-1578"><a href="https://thomas-veillard.fr/front-end-web-development/the-project/">Project</a></li>
+	<li id="menu-item-1366" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1366"><a href="https://thomas-veillard.fr/category/front-end-web-development/introduction/">Introduction</a></li>
+	<li id="menu-item-2642" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-2642"><a href="https://thomas-veillard.fr/category/front-end-web-development/languages/">Languages</a></li>
 </ul>
 </li>
 </ul></div>			</nav><!-- .main-navigation -->
