Add learning materials

--- a/front-end-web-development/languages/7-environment-tools-languages-frameworks/index.html
+++ b/front-end-web-development/languages/7-environment-tools-languages-frameworks/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v17.4 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v17.5 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>02. Environment (tools, languages, frameworks) - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/front-end-web-development/languages/7-environment-tools-languages-frameworks/">
 	<meta property="og:locale" content="fr_FR">
@@ -28,7 +28,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:label1" content="Écrit par">
 	<meta name="twitter:data1" content="Thomas Veillard">
-	<meta name="twitter:label2" content="Durée de lecture estimée">
+	<meta name="twitter:label2" content="Durée de lecture est.">
 	<meta name="twitter:data2" content="4 minutes">
 	<script type="application/ld+json" class="yoast-schema-graph">{
 	    "@context": "https://schema.org",
