Add a tutorial forbackend development with typescript

--- a/index.html
+++ b/index.html
@@ -287,7 +287,10 @@ blockquote, cite {
 
 .ui-accordion-header h4 {
 	margin-top: 0 !important;
-}</style>
+}
+
+.u-mbs { margin-bottom: 0.25em; }
+.u-mlm { margin-left: 1em; }</style>
 		</head>
 
 <body class="home page-template page-template-landing-post page-template-landing-post-php page page-id-708 wp-embed-responsive">
