--- a/quizz/7d1d50c8-22a6-44f5-92c3-ed8430a01519/index.html
+++ b/quizz/7d1d50c8-22a6-44f5-92c3-ed8430a01519/index.html
@@ -274,7 +274,10 @@ blockquote, cite {
 
 .ui-accordion-header h4 {
 	margin-top: 0 !important;
-}</style>
+}
+
+.u-mbs { margin-bottom: 0.25em; }
+.u-mlm { margin-left: 1em; }</style>
 		</head>
 
 <body class="quizz-template-default single single-quizz postid-1515 wp-embed-responsive">
