--- a/front-end-web-development/vue/01-vue-practical-activity-part-n1/index.html
+++ b/front-end-web-development/vue/01-vue-practical-activity-part-n1/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v17.7.1 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v17.9 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>01. Vue: practical activity, part n°1 - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/front-end-web-development/vue/01-vue-practical-activity-part-n1/">
 	<meta property="og:locale" content="fr_FR">
@@ -325,7 +325,11 @@ blockquote, cite {
 }
 
 .u-mbs { margin-bottom: 0.25em; }
-.u-mlm { margin-left: 1em; }</style>
+.u-mlm { margin-left: 1em; }
+
+.strikethrough {
+	text-decoration: line-through;
+}</style>
 		</head>
 
 <body class="post-template-default single single-post postid-3243 single-format-standard wp-embed-responsive">
