--- a/quizz/24a77c23-be4b-49bf-a27f-43381047bd08/index.html
+++ b/quizz/24a77c23-be4b-49bf-a27f-43381047bd08/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v17.7.1 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v17.9 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>What produce HTML in an Single Page Application? - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/quizz/24a77c23-be4b-49bf-a27f-43381047bd08/">
 	<meta property="og:locale" content="fr_FR">
@@ -292,7 +292,11 @@ blockquote, cite {
 }
 
 .u-mbs { margin-bottom: 0.25em; }
-.u-mlm { margin-left: 1em; }</style>
+.u-mlm { margin-left: 1em; }
+
+.strikethrough {
+	text-decoration: line-through;
+}</style>
 		</head>
 
 <body class="quizz-template-default single single-quizz postid-1495 wp-embed-responsive">
