--- a/quizz/4b2454cb-64fe-4885-9876-0d905b8333c1/index.html
+++ b/quizz/4b2454cb-64fe-4885-9876-0d905b8333c1/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v17.7.1 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v17.9 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>The main (or master) branch for git hf workflow is dedicated to: - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/quizz/4b2454cb-64fe-4885-9876-0d905b8333c1/">
 	<meta property="og:locale" content="fr_FR">
@@ -290,7 +290,11 @@ blockquote, cite {
 }
 
 .u-mbs { margin-bottom: 0.25em; }
-.u-mlm { margin-left: 1em; }</style>
+.u-mlm { margin-left: 1em; }
+
+.strikethrough {
+	text-decoration: line-through;
+}</style>
 		</head>
 
 <body class="quizz-template-default single single-quizz postid-1499 wp-embed-responsive">
