--- a/quizz/6e2c48ae-e492-11eb-ba80-0242ac130004/index.html
+++ b/quizz/6e2c48ae-e492-11eb-ba80-0242ac130004/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v17.7.1 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v17.9 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Which of those are common to both Chrome and Node.js? - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/quizz/6e2c48ae-e492-11eb-ba80-0242ac130004/">
 	<meta property="og:locale" content="fr_FR">
@@ -277,7 +277,11 @@ blockquote, cite {
 }
 
 .u-mbs { margin-bottom: 0.25em; }
-.u-mlm { margin-left: 1em; }</style>
+.u-mlm { margin-left: 1em; }
+
+.strikethrough {
+	text-decoration: line-through;
+}</style>
 		</head>
 
 <body class="quizz-template-default single single-quizz postid-2584 wp-embed-responsive">
