--- a/front-end-web-development/04-backend/practical-activity-simple-plagiarism-detection-cli/index.html
+++ b/front-end-web-development/04-backend/practical-activity-simple-plagiarism-detection-cli/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v19.10 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v19.11 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>01. Simple plagiarism detection CLI (pratical activity) - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/front-end-web-development/04-backend/practical-activity-simple-plagiarism-detection-cli/">
 	<meta property="og:locale" content="fr_FR">
@@ -317,6 +317,7 @@ blockquote, cite {
 .u-mbn { margin-bottom: 0; }
 .u-mbs { margin-bottom: 0.25em; }
 .u-mlm { margin-left: 1em; }
+.u-mtm { margin-top: 1em; }
 
 .strikethrough {
 	text-decoration: line-through;
