--- a/quizz/0ac52a74-8f7c-4eb2-b103-674abeb49d33/index.html
+++ b/quizz/0ac52a74-8f7c-4eb2-b103-674abeb49d33/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v19.10 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v19.11 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Which proposition best describes a single page application? - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/quizz/0ac52a74-8f7c-4eb2-b103-674abeb49d33/">
 	<meta property="og:locale" content="fr_FR">
@@ -284,6 +284,7 @@ blockquote, cite {
 .u-mbn { margin-bottom: 0; }
 .u-mbs { margin-bottom: 0.25em; }
 .u-mlm { margin-left: 1em; }
+.u-mtm { margin-top: 1em; }
 
 .strikethrough {
 	text-decoration: line-through;
