--- a/quizz/6eafa1cb-8389-4ebc-8ad9-e87be0ce722e/index.html
+++ b/quizz/6eafa1cb-8389-4ebc-8ad9-e87be0ce722e/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v19.10 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v19.11 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Where is the bug? - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/quizz/6eafa1cb-8389-4ebc-8ad9-e87be0ce722e/">
 	<meta property="og:locale" content="fr_FR">
@@ -287,6 +287,7 @@ blockquote, cite {
 .u-mbn { margin-bottom: 0; }
 .u-mbs { margin-bottom: 0.25em; }
 .u-mlm { margin-left: 1em; }
+.u-mtm { margin-top: 1em; }
 
 .strikethrough {
 	text-decoration: line-through;
