--- a/quizz/e256f6ff-28b8-4713-bad3-b1151b4a8669/index.html
+++ b/quizz/e256f6ff-28b8-4713-bad3-b1151b4a8669/index.html
@@ -11,7 +11,7 @@
 	<script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
-	<!-- This site is optimized with the Yoast SEO plugin v19.10 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v19.11 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>What is the type of &#039;result&#039;? - Thomas VEILLARD</title>
 	<link rel="canonical" href="https://thomas-veillard.fr/quizz/e256f6ff-28b8-4713-bad3-b1151b4a8669/">
 	<meta property="og:locale" content="fr_FR">
@@ -286,6 +286,7 @@ blockquote, cite {
 .u-mbn { margin-bottom: 0; }
 .u-mbs { margin-bottom: 0.25em; }
 .u-mlm { margin-left: 1em; }
+.u-mtm { margin-top: 1em; }
 
 .strikethrough {
 	text-decoration: line-through;
