Update dependencies + replace ManyToMany by ManyToOne in tutorial instructions

--- a/front-end-web-development/lectures/introduction/index.html
+++ b/front-end-web-development/lectures/introduction/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirection...</title>
-		<meta http-equiv="refresh" content="0;url=https://thomas-veillard.fr/front-end-web-development/introduction/introduction/">
+		<meta http-equiv="refresh" content="0;url=https://thomas-veillard.fr/front-end-web-development/introduction/introduction/?simply_static_page=63845">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "https://thomas-veillard.fr/front-end-web-development/introduction/introduction/";
+			window.location = "https://thomas-veillard.fr/front-end-web-development/introduction/introduction/?simply_static_page=63845";
 		</script>
 
-		<p>You are being redirected to <a href="https://thomas-veillard.fr/front-end-web-development/introduction/introduction/">https://thomas-veillard.fr/front-end-web-development/introduction/introduction/</a></p>
+		<p>You are being redirected to <a href="https://thomas-veillard.fr/front-end-web-development/introduction/introduction/?simply_static_page=63845">https://thomas-veillard.fr/front-end-web-development/introduction/introduction/?simply_static_page=63845</a></p>
 	</body>
 </html>
